knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan_Opportunity__c/fields/pqcrush__Account_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Account_Plan_Name__c</fullName>
    <formula>pqcrush__Account_Plan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Name</label>
    <type>Text</type>
</CustomField>