knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan_Opportunity__c/fields/pqcrush__Amount__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Amount__c</fullName>
    <formula>pqcrush__Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>