knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan_Opportunity__c/fields/pqcrush__Close_Date__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Close_Date__c</fullName>
    <formula>pqcrush__Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>