knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan_Opportunity__c/fields/pqcrush__Stage__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Stage__c</fullName>
    <formula>TEXT(pqcrush__Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>