knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan_Opportunity__c/validationRules/pqcrush__Lock_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__Lock_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(pqcrush__Opportunity__c)),
  ISCHANGED(pqcrush__Opportunity__c)
)</errorConditionFormula>
    <errorMessage>The Opportunity cannot change values.</errorMessage>
</ValidationRule>