knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Account_Plan_Opportunity__c/validationRules/pqcrush__Matching_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__Matching_Account</fullName>
    <active>false</active>
    <errorConditionFormula>pqcrush__Account_Plan__r.pqcrush__Account__c !=  pqcrush__Opportunity__r.AccountId</errorConditionFormula>
    <errorMessage>Account must match on Account Plan and Opportunity</errorMessage>
</ValidationRule>